Typo fix for page title. Add info for Bedford and Boutique. Add placeholder rows.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,5 +1,5 @@
 ---
-title: 'Squarespace 7 Templage Guide'
+title: 'Squarespace 7 Template Guide'
 description: 'A simple, sortable table to quickly compare basic features between various Squarespace Templates'
 
 page: 'Home'
@@ -136,6 +136,45 @@ page: 'Home'
               %a{:href => 'http://aviator-demo.squarespace.com/', :target => '_blank'} Demo
               %br
               %a{:href => 'http://aviator-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+
+          %tr
+            %td Bedford
+            %td Business, Personal
+            %td Full Width, Image&Text
+            %td Yes
+            %td Folder, Product Categories, Blog
+            %td Static, Fixed (In Index)
+            %td Footer
+            %td
+              %a{:href => 'http://bedford-demo.squarespace.com/', :target => '_blank'} Demo
+              %br
+              %a{:href => 'http://bedford-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+
+          %tr
+            %td Boutique
+            %td N/A
+            %td None
+            %td No
+            %td None
+            %td Static, Fixed
+            %td None
+            %td
+              %a{:href => 'http://boutique-demo.squarespace.com/', :target => '_blank'} Demo
+              %br
+              %a{:href => 'http://boutique-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+
+          %tr
+            %td Name
+            %td Categories
+            %td Header Style
+            %td Index?
+            %td Sidebar Type
+            %td Nav Type
+            %td Secondary Nav?
+            %td
+              %a{:href => 'http://-demo.squarespace.com/', :target => '_blank'} Demo
+              %br
+              %a{:href => 'http://-demo.squarespace.com/', :target => '_blank'} Readme
 
           %tr
             %td Name
