--- a/source/stylesheets/sections/_table.scss
+++ b/source/stylesheets/sections/_table.scss
@@ -1,4 +1,7 @@
 table.dataTable {
+
+  // width: 100% !important;
+
 	th {
     padding: 10px 30px 10px 20px;
     border-bottom: 1px solid #dadada;
