--- a/source/stylesheets/application.css.scss
+++ b/source/stylesheets/application.css.scss
@@ -12,7 +12,9 @@
 @import "layout/footer";
 
 @import "vendor/datatables.min";
+@import "vendor/datatables.responsive";
 @import "sections/table";
+@import "sections/footnotes";
 
 @import "widgets/main-nav";
 @import "widgets/buttons";
