Bring back width declaration for table. Set default background for sorting th's

--- a/source/stylesheets/sections/_table.scss
+++ b/source/stylesheets/sections/_table.scss
@@ -1,6 +1,6 @@
 table.dataTable {
 
-  // width: 100% !important;
+  width: 100% !important;
 
 	th {
     padding: 10px 30px 10px 20px;
@@ -28,18 +28,24 @@ table.dataTable {
     }
 
     &.sorting {
+      background: none;
+
     	&:after {
     		content: '\f0dc';
     	}
     }
 
     &.sorting_asc {
+      background: none;
+
       &:after {
         content: '\f0de';
       }
     }
 
     &.sorting_desc {
+      background: none;
+
       &:after {
         content: '\f0dd';
       }
