Add Favourite Column

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -41,6 +41,7 @@ page: 'Home'
             %th Nav Type
             %th Secondary Nav
             %th Links
+            %th Fav
         %tfoot
           %tr
             %th Name
@@ -51,6 +52,7 @@ page: 'Home'
             %th Nav Type
             %th Secondary Nav
             %th Links
+            %th Fav
 
         %tbody
           %tr
@@ -64,6 +66,8 @@ page: 'Home'
             %td 
               %a{:href => 'http://adirondack-demo.squarespace.com/' , :target => '_blank'} Demo
               %a{:href => 'http://adirondack-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Adversary
@@ -76,6 +80,8 @@ page: 'Home'
             %td
               %a{:href => 'http://adversary-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://adversary-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Alex
@@ -88,6 +94,8 @@ page: 'Home'
             %td
               %a{:href => 'http://alex-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://alex-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Anya
@@ -100,6 +108,8 @@ page: 'Home'
             %td
               %a{:href => 'http://anya-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://anya-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Aubrey
@@ -112,6 +122,8 @@ page: 'Home'
             %td
               %a{:href => 'http://aubrey-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://aubrey-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Avenue
@@ -124,6 +136,8 @@ page: 'Home'
             %td
               %a{:href => 'http://avenue-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://avenue-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+              %i.fa.fa-star
 
           %tr
             %td Aviator
@@ -136,6 +150,8 @@ page: 'Home'
             %td
               %a{:href => 'http://aviator-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://aviator-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Bedford
@@ -148,6 +164,8 @@ page: 'Home'
             %td
               %a{:href => 'http://bedford-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://bedford-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Boutique
@@ -160,6 +178,8 @@ page: 'Home'
             %td
               %a{:href => 'http://boutique-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://boutique-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Bryant
@@ -172,6 +192,8 @@ page: 'Home'
             %td
               %a{:href => 'http://bryant-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://bryant-demo.squarespace.com/read-me', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Charlotte
@@ -184,6 +206,8 @@ page: 'Home'
             %td
               %a{:href => 'http://charlotte-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://charlotte-demo.squarespace.com/read-me', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Dovetail
@@ -196,6 +220,8 @@ page: 'Home'
             %td
               %a{:href => 'http://dovetail-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://dovetail-demo.squarespace.com/read-me', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Encore
@@ -208,6 +234,8 @@ page: 'Home'
             %td
               %a{:href => 'http://encore-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://encore-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Five
@@ -220,6 +248,8 @@ page: 'Home'
             %td
               %a{:href => 'http://five-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://five-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Flatiron
@@ -232,6 +262,8 @@ page: 'Home'
             %td
               %a{:href => 'http://flatiron-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://flatiron-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Forte
@@ -244,6 +276,8 @@ page: 'Home'
             %td
               %a{:href => 'http://forte-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://forte-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Frontrow
@@ -255,6 +289,8 @@ page: 'Home'
             %td Header
             %td
               %a{:href => 'http://frontrow-demo.squarespace.com/', :target => '_blank'} Demo
+            %td.text-center
+              %i.fa.fa-star
 
           %tr
             %td Fulton
@@ -267,6 +303,8 @@ page: 'Home'
             %td
               %a{:href => 'http://fulton-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://fulton-demo.squarespace.com/readme/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Galapagos
@@ -279,6 +317,8 @@ page: 'Home'
             %td
               %a{:href => 'http://galapagos-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://galapagos-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Hayden
@@ -291,6 +331,8 @@ page: 'Home'
             %td
               %a{:href => 'http://hayden-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://hayden-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+              %i.fa.fa-star
 
           %tr
             %td Horizon
@@ -303,6 +345,8 @@ page: 'Home'
             %td
               %a{:href => 'http://horizon-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://horizon-demo.squarespace.com/readme/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Ishimoto
@@ -315,6 +359,8 @@ page: 'Home'
             %td
               %a{:href => 'http://ishimoto-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://ishimoto-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Julia
@@ -327,6 +373,8 @@ page: 'Home'
             %td
               %a{:href => 'http://julia-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://julia-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Marquee
@@ -339,6 +387,8 @@ page: 'Home'
             %td
               %a{:href => 'http://marquee-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://marquee-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Momentum
@@ -351,6 +401,8 @@ page: 'Home'
             %td
               %a{:href => 'http://momentum-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://momentum-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Montauk
@@ -363,6 +415,8 @@ page: 'Home'
             %td
               %a{:href => 'http://montauk-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://montauk-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Naomi
@@ -375,6 +429,8 @@ page: 'Home'
             %td
               %a{:href => 'http://naomi-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://naomi-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Native
@@ -386,6 +442,8 @@ page: 'Home'
             %td None
             %td
               %a{:href => 'http://native-demo.squarespace.com/', :target => '_blank'} Demo
+            %td.text-center
+
 
           %tr
             %td Om
@@ -398,6 +456,8 @@ page: 'Home'
             %td
               %a{:href => 'http://om-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://om-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Pacific
@@ -410,6 +470,8 @@ page: 'Home'
             %td
               %a{:href => 'http://pacific-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://pacific-demo.squarespace.com/readme/', :target => '_blank'} Readme
+            %td.text-center
+              %i.fa.fa-star
 
           %tr
             %td Peak
@@ -422,6 +484,8 @@ page: 'Home'
             %td
               %a{:href => 'http://peak-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://peak-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Shift
@@ -434,6 +498,8 @@ page: 'Home'
             %td
               %a{:href => 'http://shift-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://shift-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Supply
@@ -446,6 +512,8 @@ page: 'Home'
             %td
               %a{:href => 'http://supply-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://supply-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Wells
@@ -458,6 +526,8 @@ page: 'Home'
             %td
               %a{:href => 'http://wells-demo.squarespace.com/', :target => '_blank'} Demo
               %a{:href => 'http://wells-demo.squarespace.com/read-me/', :target => '_blank'} Readme
+            %td.text-center
+
 
           %tr
             %td Wexley
@@ -469,6 +539,8 @@ page: 'Home'
             %td None
             %td
               %a{:href => 'http://wells-demo.squarespace.com/', :target => '_blank'} Demo
+            %td.text-center
+
 
       -#
         .footnotes
