Left align "last updated" Move show X templates dropdown to the bottom of the table Bump up font size of intro paragraph Add a little more space between search bar and table Left align table headings Put the special thanks on one line if possible Make our contact info a little bigger (same as the intro paragraph once we bump the size up)

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -19,7 +19,7 @@ page: 'Home'
     %p.sub-head
       A simple, sortable table to compare basic features between various Squarespace templates
       %br
-    %p.sub-head.text-right
+    %p.sub-head
       %i
         %sup
           Last updated
@@ -39,7 +39,7 @@ page: 'Home'
           %tr
             %th Name
             %th Categories
-            %th Page Header Type
+            %th Header Type
             %th Index Page
             %th Sidebar Type
             %th Nav Type
@@ -50,7 +50,7 @@ page: 'Home'
           %tr
             %th Name
             %th Categories
-            %th Page Header Type
+            %th Header Type
             %th Index Page
             %th Sidebar Type
             %th Nav Type
@@ -546,6 +546,11 @@ page: 'Home'
             %td.text-center
 
       .row
+        .col-xs-12
+          %br
+          %p.text-center
+            %em
+              Special thanks to Miko Coffey, this site was inspired by her awesome <a href='http://www.usingmyhead.com/squarespace-6-template-comparison-chart/' target='_blank'>Squarespace 6 template guide</a>.
         .col-sm-6.col-sm-offset-3
           %br
           %p.text-center
