--- a/source/stylesheets/sections/_table.scss
+++ b/source/stylesheets/sections/_table.scss
@@ -1,6 +1,7 @@
 table.dataTable {
 
   width: 100% !important;
+  padding: 15px 0;
 
 	th {
     padding: 10px 30px 10px 20px;
@@ -9,6 +10,7 @@ table.dataTable {
     position: relative;
     background: none;
     font-weight: normal;
+    text-align: left;
 
     &:after {
       font-family: 'fontawesome';
