Shrink Coffey credit.

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -549,8 +549,9 @@ page: 'Home'
         .col-xs-12
           %br
           %p.text-center
-            %em
-              Special thanks to Miko Coffey, this site was inspired by her awesome <a href='http://www.usingmyhead.com/squarespace-6-template-comparison-chart/' target='_blank'>Squarespace 6 template guide</a>.
+            %small
+              %em
+                This site was inspired by Miko Coffey's awesome <a href='http://www.usingmyhead.com/squarespace-6-template-comparison-chart/' target='_blank'>Squarespace 6 template guide</a>.
         .col-sm-6.col-sm-offset-3
           %br
           %p.text-center
