Add star explanation

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -546,8 +546,12 @@ page: 'Home'
             %td.text-center
 
       .row
-        .col-xs-12
+        .col-md-8.col-md-offset-2
           %br
+          %p.text-center
+            %small
+              Starred templates (<i class='fa fa-star'></i>) indicate AgileStyle's favourite templates for overall usefulness. When building Squarespace sites, we find ourselves coming back to these templates time and time again because of their flexibility.
+        .col-xs-12
           %p.text-center
             %small
               %em
